--- a/paypal.html
+++ b/paypal.html
@@ -84,6 +84,9 @@ body,td,th {
 
 <table width="590" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
+    <th width="600" bgcolor="#666666"><img src="/logo.png"></img></th>
+  </tr>
+  <tr>
     <th width="600" bgcolor="#666666"><strong>.:: Credit Card Payment via PayPal.com ::.</strong></th>
   </tr>
 </table>
