--- a/paypal.html
+++ b/paypal.html
@@ -95,7 +95,7 @@ body,td,th {
 <form name="formPaypal" action="https://www.paypal.com/cgi-bin/webscr" onSubmit="return check(this);" method="post">
 <input type="hidden" name="cmd" value="_xclick">
 <input type="hidden" name="no_note" value="1">
-<input type="hidden" name="business" value="ac@SPMerchandise.com">
+<input type="hidden" name="business" value="account@sunrisepromos.biz">
 <input type="hidden" name="currency_code" value="USD">
 <INPUT TYPE="hidden" name="tax_rate" value="2.9">
 
