--- a/paypal.html
+++ b/paypal.html
@@ -84,7 +84,7 @@ body,td,th {
 
 <table width="590" border="0" align="center" cellpadding="0" cellspacing="0">
   <tr>
-    <th width="600" bgcolor="#666666"><img src="/logo.png" style="
+    <th width="600"><img src="/logo.png" style="
     width: 200px;"></img></th>
   </tr>
   <tr>
