--- a/paypal.html
+++ b/paypal.html
@@ -88,7 +88,7 @@ body,td,th {
     width: 200px;"></img></th>
   </tr>
   <tr>
-    <th width="600" bgcolor="#666666"><strong>.:: Credit Card Payment via PayPal.com ::.</strong></th>
+    <th width="600" bgcolor="#AA6E39"><strong>.:: Credit Card Payment via PayPal.com ::.</strong></th>
   </tr>
 </table>
 
@@ -120,7 +120,7 @@ eg. 1000.00</td></tr>
   </tr>
   <tr>
     <td><div align="center">
-      <input type="image" src="https://www.paypal.com/en_US/i/btn/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Submit" />
+      <input type="image" src="/btn_paynowCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" value="Submit" />
     </div></td>
     <td>&nbsp;</td>
   </tr>
