--- a/paypal.html
+++ b/paypal.html
@@ -88,7 +88,7 @@ body,td,th {
     width: 200px;"></img></th>
   </tr>
   <tr>
-    <th width="600" bgcolor="#AA6E39"><strong>.:: Credit Card Payment via PayPal.com ::.</strong></th>
+    <th width="600" bgcolor="#F3B110"><strong>.:: Credit Card Payment via PayPal.com ::.</strong></th>
   </tr>
 </table>
 
