--- a/paypal.html
+++ b/paypal.html
@@ -88,7 +88,8 @@ body,td,th {
     width: 200px;"></img></th>
   </tr>
   <tr>
-    <th width="600" bgcolor="#F3B110"><strong>.:: Credit Card Payment via PayPal.com ::.</strong></th>
+    <th width="600" bgcolor="#F3B110">
+<strong><font color="#ABAA98">.:: Credit Card Payment via PayPal.com ::.</font></strong></th>
   </tr>
 </table>
 
