--- a/paypal.html
+++ b/paypal.html
@@ -89,7 +89,7 @@ body,td,th {
   </tr>
   <tr>
     <th width="600" bgcolor="#F3B110">
-<strong><font color="#ABAA98">.:: Credit Card Payment via PayPal.com ::.</font></strong></th>
+<strong><font color="#436077">.:: Credit Card Payment via PayPal.com ::.</font></strong></th>
   </tr>
 </table>
 
